--- a/src/layout/components/lay-header/assets/styles.css
+++ b/src/layout/components/lay-header/assets/styles.css
@@ -17,7 +17,9 @@
   background-size: cover;
   background-repeat: no-repeat;
 }
-
+.mobile-logout {
+  display: inline-block;
+}
 .mobile-login {
   display: none;
 }
