--- a/src/components/list-movie/assets/styles.css
+++ b/src/components/list-movie/assets/styles.css
@@ -96,11 +96,6 @@ tr:hover {
   border-radius: 4px;
   margin-bottom: 20px;
 }
-
-.movie-detail div {
-  margin-bottom: 15px;
-}
-
 .movie-detail div label {
   font-weight: bold;
   color: #2c3e50;
@@ -122,6 +117,19 @@ tr:hover {
 
 .movie-detail .button-container button:last-child:hover {
   background-color: #27ae60;
+}
+
+.the-loai-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 40px;
+}
+
+.the-loai-item {
+  margin-bottom: 10px;
+  /* Khoảng cách dưới mỗi item */
+  display: flex;
+  align-items: center;
 }
 
 @media (max-width: 768px) {
