--- a/src/components/list-invoice/assets/styles.css
+++ b/src/components/list-invoice/assets/styles.css
@@ -1,4 +1,3 @@
-h2,
 h3 {
     color: var(--first-color);
 }
@@ -31,10 +30,6 @@ input:disabled {
 textarea {
     resize: vertical;
     min-height: 100px;
-}
-
-button:hover {
-    background-color: black;
 }
 
 table {
@@ -70,30 +65,18 @@ tr:hover {
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
-.card h3 {
-    margin-top: 0;
-    color: var(--first-color);
-}
-
 .card div {
     margin-bottom: 10px;
 }
 
-.card div strong {
-    color: var(--first-color);
-}
-
 .invoice-manager {
     width: 100%;
-    max-width: 1200px;
     overflow-x: auto;
 }
 
 .invoice-detail {
     width: 100%;
-    max-width: 1000px;
     background-color: #fff;
-    padding: 20px;
     border-radius: 8px;
 }
 
@@ -115,33 +98,88 @@ tr:hover {
     margin-bottom: 15px;
 }
 
-.invoice-detail .card.invoice-details ul li strong {
-    color: var(--first-color);
+.movie_checkout_content {
+    margin: 15px 0px;
 }
 
-.button-container button:last-child {
-    background-color: #2ecc71;
+.header-ticker {
+    color: white;
+    display: flex;
+    gap: 10px;
+    background-color: #0abb98;
+    padding: 10px;
+    border-radius: 8px 8px 0 0px;
+    align-items: center;
+    text-align: center;
 }
 
-.button-container button:last-child:hover {
-    background-color: #27ae60;
+.ticket-container {
+    justify-content: space-evenly;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    width: 100%;
+    background-color: #1e2949;
+    color: white;
+    border-radius: 0 0 8px 8px;
+    padding: 20px;
 }
 
-/* Responsive Styles */
-@media (max-width: 768px) {
-    .invoice-manager table {
-        font-size: 14px;
-    }
+.ticket-info {
+    margin-top: 16px;
+}
 
-    .invoice-detail {
-        padding: 15px;
-    }
+.col-1 .status {
+    color: #1abc9c;
+    font-size: 16px;
+}
 
-    .card {
-        padding: 15px;
-    }
+.row-1 {
+    justify-content: space-between;
+    display: flex;
+}
 
-    button {
-        padding: 6px 12px;
-    }
+.row-1 p {
+    padding: 10px;
+}
+
+.movie-details {
+    color: #ff7675;
+}
+
+.ticket-info p {
+    font-size: 14px;
+    margin: 4px 0;
+}
+
+.ticket-info span {
+    font-weight: bold;
+}
+
+.address {
+    color: #b2bec3;
+}
+
+.qr-section {
+    text-align: center;
+    margin-top: 16px;
+}
+
+.qr-section img {
+    width: 240px;
+    height: 240px;
+}
+
+.ticket-code {
+    margin-top: 8px;
+    background-color: #2c3e50;
+    padding: 8px;
+    border-radius: 8px;
+    display: inline-block;
+}
+
+.ticket-code span {
+    font-size: 18px;
+    color: #1abc9c;
+    font-weight: bold;
 }
