--- a/src/components/list-invoice/assets/styles.css
+++ b/src/components/list-invoice/assets/styles.css
@@ -52,7 +52,9 @@ th {
     color: white;
     font-weight: bold;
 }
-
+button:hover {
+    background-color: black;
+  }
 tr:hover {
     background-color: #f1f1f1;
 }
@@ -129,9 +131,17 @@ tr:hover {
     margin-top: 16px;
 }
 
-.col-1 .status {
+.text-red {
+    color: red;
+}
+
+.text-green {
     color: #1abc9c;
-    font-size: 16px;
+}
+
+.col-1 .status {
+    font-weight: bold;
+    font-size: 1.5em;
 }
 
 .row-1 {
