--- a/src/layout/components/lay-footer/assets/styles.css
+++ b/src/layout/components/lay-footer/assets/styles.css
@@ -12,6 +12,10 @@
     gap: 4rem 2rem
 }
 
+.footer_col h1{
+    margin-bottom: 15px;
+}
+
 .footer_col .desc {
     margin-block: 2rem
 }
@@ -55,7 +59,10 @@
     opacity: .8;
     transition: .3s
 }
-
+.socials a:hover {
+    color: var(--first-color);
+    background: black;
+}
 .copyright {
     padding: 1rem;
     font-size: .9rem;
