--- a/src/components/list-voucher/assets/styles.css
+++ b/src/components/list-voucher/assets/styles.css
@@ -61,7 +61,8 @@ td {
 }
 
 th {
-  background-color: var(--first-color);;
+  background-color: var(--first-color);
+  ;
   color: white;
   font-weight: bold;
 }
@@ -84,13 +85,6 @@ tr:hover {
   border: 1px solid #ddd;
 }
 
-.voucher-detail {
-  width: 100%;
-  margin: 20px;
-  background-color: #fff;
-  border-radius: 8px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-}
 
 .voucher-detail .voucher-info {
   margin-bottom: 15px;
@@ -111,12 +105,6 @@ tr:hover {
 
 .voucher-detail .button-container {
   display: flex;
-  justify-content: space-between;
-  margin-top: 20px;
-}
-
-.voucher-detail .button-container button {
-  width: 48%;
 }
 
 .voucher-detail .button-container button:last-child {
@@ -125,27 +113,4 @@ tr:hover {
 
 .voucher-detail .button-container button:last-child:hover {
   background-color: black;
-}
-
-@media (max-width: 768px) {
-  .voucher-manager table {
-    font-size: 14px;
-  }
-
-  .voucher-detail {
-    padding: 15px;
-  }
-
-  .voucher-detail .button-container button {
-    width: 100%;
-    margin-bottom: 10px;
-  }
-
-  .voucher-detail .voucher-info input {
-    font-size: 14px;
-  }
-
-  .voucher-manager .voucher-info input {
-    font-size: 14px;
-  }
 }
