update view and function

--- a/src/components/list-movie/assets/styles.css
+++ b/src/components/list-movie/assets/styles.css
@@ -102,3 +102,6 @@ tr:hover {
 .movie-detail .button-container button:last-child:hover {
   background-color: black;
 }
+.the-loai-container{
+  display: flex;
+}
