--- a/src/layout/components/lay-header/assets/styles.css
+++ b/src/layout/components/lay-header/assets/styles.css
@@ -8,15 +8,15 @@
 }
 
 .header {
-  h2 {
-    color: var(--text-color);
-  }
-
   height: 550px;
   background: url(src/assets/img/bg.webp);
   background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
+}
+
+.header h2 {
+  color: var(--text-color);
 }
 
 .mobile-logout {
