--- a/src/components/list-invoice/assets/styles.css
+++ b/src/components/list-invoice/assets/styles.css
@@ -52,9 +52,11 @@ th {
     color: white;
     font-weight: bold;
 }
+
 button:hover {
     background-color: black;
-  }
+}
+
 tr:hover {
     background-color: #f1f1f1;
 }
@@ -192,4 +194,13 @@ tr:hover {
     font-size: 18px;
     color: #1abc9c;
     font-weight: bold;
+}
+
+.search-input {
+    padding: 8px;
+    font-size: 14px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    border: 1px solid #ddd;
+    box-sizing: border-box;
 }
