--- a/src/components/list-movie/assets/styles.css
+++ b/src/components/list-movie/assets/styles.css
@@ -102,6 +102,75 @@ tr:hover {
 .movie-detail .button-container button:last-child:hover {
   background-color: black;
 }
-.the-loai-container{
+
+.the-loai-container {
   display: flex;
+}
+
+/* Form Group */
+.form-group {
+  margin-bottom: 20px;
+}
+
+.form-group label {
+  display: block;
+  font-weight: bold;
+  margin-bottom: 8px;
+  color: #333;
+}
+
+.form-group select,
+.form-group input[type="date"] {
+  width: 100%;
+  padding: 10px;
+  font-size: 14px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  transition: border-color 0.3s ease;
+}
+
+.form-group input[type="date"]:focus,
+.form-group select:focus {
+  border-color: #007bff;
+  outline: none;
+  box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
+}
+
+/* Date Picker Group */
+.date-picker-group .date-inputs {
+  display: flex;
+  gap: 20px;
+}
+
+.date-inputs div {
+  flex: 1;
+}
+
+.date-inputs label {
+  margin-bottom: 5px;
+  display: block;
+  font-size: 14px;
+  color: #555;
+}
+
+/* Checkbox Group */
+.checkbox-group {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+
+.checkbox-item {
+  display: flex;
+  align-items: center;
+}
+
+.checkbox-item input[type="checkbox"] {
+  margin-right: 10px;
+  cursor: pointer;
+}
+
+.checkbox-item label {
+  font-size: 14px;
+  color: #555;
 }
