--- a/src/style/breakpoint.css
+++ b/src/style/breakpoint.css
@@ -388,6 +388,9 @@
 /*=============== BREAKPOINTS ===============*/
 /* For small devices */
 @media screen and (max-width: 360px) {
+    .admin_header__container {
+        padding-inline: 1rem;
+    }
 
     .sidebar {
         width: max-content;
@@ -433,6 +436,7 @@
 
     .admin_header__container {
         height: calc(var(--header-height) + 2rem);
+        padding-inline: 2rem;
     }
 
     .admin_header__logo {
@@ -457,7 +461,7 @@
 
     /* Reduce sidebar */
     .show-sidebar {
-        width: 100px;
+        width: 90px;
     }
 
     .show-sidebar .sidebar__user {
@@ -476,7 +480,7 @@
 
     .main {
         padding-left: 334px;
-        padding-top: 5rem;
+        padding-top: 8rem;
         transition: padding .4s;
     }
 
