--- a/src/components/list-invoice/assets/styles.css
+++ b/src/components/list-invoice/assets/styles.css
@@ -204,3 +204,30 @@ tr:hover {
     border: 1px solid #ddd;
     box-sizing: border-box;
 }
+
+.filter-container {
+    display: flex;
+    gap: 1rem;
+}
+
+.filter-container div {
+    display: flex;
+    flex-direction: column;
+}
+
+.filter-container label {
+    margin-bottom: 0.5rem;
+}
+
+.filter-container input,
+.filter-container select {
+    padding: 8px;
+    border-radius: 5px;
+    border: 1px solid #ddd;
+    outline: none;
+}
+
+.filter-container select:focus {
+    border-color: var(--first-color);
+    outline: none;
+}
