--- a/src/layout/components/lay-footer/assets/styles.css
+++ b/src/layout/components/lay-footer/assets/styles.css
@@ -52,16 +52,15 @@
 }
 
 .socials a {
-    color: black;
+    color: var(--first-color);
     width: 40px;
     height: 40px;
-    background: var(--first-color);
+    background: white;
     border-radius: 50%;
     display: flex;
     align-items: center;
     justify-content: center;
     font-size: 1.1rem;
-    opacity: .8;
     transition: .3s
 }
 
