--- a/src/style/style.css
+++ b/src/style/style.css
@@ -7,7 +7,6 @@
     border-radius: 50%;
     padding: 0;
     cursor: pointer;
-    opacity: 0;
     visibility: hidden;
     transition: opacity .5s ease, visibility .5s ease;
     font-size: 20px;
@@ -22,7 +21,7 @@
 
 .scroll-to-top:hover {
     background-color: black;
-    color: var(--first-color);
+    color: white;
 }
 
 .scroll-to-top span {
