--- a/src/views/list-explorer/assets/styles.css
+++ b/src/views/list-explorer/assets/styles.css
@@ -112,6 +112,9 @@
 }
 
 /* animation text in first item */
+.carousel .list .content .des {
+    font-size: 16px;
+}
 
 .carousel .list .item:nth-child(1) .content .author,
 .carousel .list .item:nth-child(1) .content .title,
