--- a/src/views/list-service/assets/styles.css
+++ b/src/views/list-service/assets/styles.css
@@ -1,10 +1,12 @@
 section {
     background-color: black;
-    height: 80vh;
+    /* height: 80vh; */
     display: grid;
     place-items: center;
 }
-
+.section-heading{
+    padding: 100px;
+}
 .row {
     display: flex;
     flex-wrap: wrap;
